--- a/packages/sacado/test/GTestSuite/googletest/googletest/CMakeLists.txt
+++ b/packages/sacado/test/GTestSuite/googletest/googletest/CMakeLists.txt
@@ -48,7 +48,7 @@ endif()
 
 cmake_minimum_required(VERSION 3.5)
 cmake_policy(SET CMP0048 NEW)
-project(gtest VERSION ${GOOGLETEST_VERSION} LANGUAGES CXX C)
+project(sacado-gtest VERSION ${GOOGLETEST_VERSION} LANGUAGES CXX C)
 
 if (POLICY CMP0063) # Visibility
   cmake_policy(SET CMP0063 NEW)
@@ -123,11 +123,11 @@ include_directories(${gtest_build_include_dirs})
 # Google Test libraries.  We build them using more strict warnings than what
 # are used for other targets, to ensure that gtest can be compiled by a user
 # aggressive about warnings.
-cxx_library(gtest "${cxx_strict}" src/gtest-all.cc)
-set_target_properties(gtest PROPERTIES VERSION ${GOOGLETEST_VERSION})
+cxx_library(sacado-gtest "${cxx_strict}" src/gtest-all.cc)
+set_target_properties(sacado-gtest PROPERTIES VERSION ${GOOGLETEST_VERSION})
 if(GTEST_HAS_ABSL)
-  target_compile_definitions(gtest PUBLIC GTEST_HAS_ABSL=1)
-  target_link_libraries(gtest PUBLIC
+  target_compile_definitions(sacado-gtest PUBLIC GTEST_HAS_ABSL=1)
+  target_link_libraries(sacado-gtest PUBLIC
     absl::failure_signal_handler
     absl::stacktrace
     absl::symbolize
@@ -148,7 +148,7 @@ set_target_properties(gtest_main PROPERTIES VERSION ${GOOGLETEST_VERSION})
 # in via add_subdirectory() rather than being a standalone build).
 if (DEFINED CMAKE_VERSION AND NOT "${CMAKE_VERSION}" VERSION_LESS "2.8.11")
   string(REPLACE ";" "$<SEMICOLON>" dirs "${gtest_build_include_dirs}")
-  target_include_directories(gtest SYSTEM INTERFACE
+  target_include_directories(sacado-gtest SYSTEM INTERFACE
     "$<BUILD_INTERFACE:${dirs}>"
     "$<INSTALL_INTERFACE:$<INSTALL_PREFIX>/${CMAKE_INSTALL_INCLUDEDIR}>")
   target_include_directories(gtest_main SYSTEM INTERFACE
@@ -156,14 +156,14 @@ if (DEFINED CMAKE_VERSION AND NOT "${CMAKE_VERSION}" VERSION_LESS "2.8.11")
     "$<INSTALL_INTERFACE:$<INSTALL_PREFIX>/${CMAKE_INSTALL_INCLUDEDIR}>")
 endif()
 if(CMAKE_SYSTEM_NAME MATCHES "QNX")
-  target_link_libraries(gtest PUBLIC regex)
+  target_link_libraries(sacado-gtest PUBLIC regex)
 endif()
-target_link_libraries(gtest_main PUBLIC gtest)
+target_link_libraries(gtest_main PUBLIC sacado-gtest)
 
 ########################################################################
 #
 # Install rules
-install_project(gtest gtest_main)
+install_project(sacado-gtest gtest_main)
 
 ########################################################################
 #
@@ -182,8 +182,8 @@ if (gtest_build_samples)
   cxx_executable(sample6_unittest samples gtest_main)
   cxx_executable(sample7_unittest samples gtest_main)
   cxx_executable(sample8_unittest samples gtest_main)
-  cxx_executable(sample9_unittest samples gtest)
-  cxx_executable(sample10_unittest samples gtest)
+  cxx_executable(sample9_unittest samples sacado-gtest)
+  cxx_executable(sample10_unittest samples sacado-gtest)
 endif()
 
 ########################################################################
@@ -206,31 +206,31 @@ if (gtest_build_tests)
   # C++ tests built with standard compiler flags.
 
   cxx_test(googletest-death-test-test gtest_main)
-  cxx_test(gtest_environment_test gtest)
+  cxx_test(gtest_environment_test sacado-gtest)
   cxx_test(googletest-filepath-test gtest_main)
   cxx_test(googletest-listener-test gtest_main)
   cxx_test(gtest_main_unittest gtest_main)
   cxx_test(googletest-message-test gtest_main)
-  cxx_test(gtest_no_test_unittest gtest)
+  cxx_test(gtest_no_test_unittest sacado-gtest)
   cxx_test(googletest-options-test gtest_main)
-  cxx_test(googletest-param-test-test gtest
+  cxx_test(googletest-param-test-test sacado-gtest
     test/googletest-param-test2-test.cc)
   cxx_test(googletest-port-test gtest_main)
   cxx_test(gtest_pred_impl_unittest gtest_main)
-  cxx_test(gtest_premature_exit_test gtest
+  cxx_test(gtest_premature_exit_test sacado-gtest
     test/gtest_premature_exit_test.cc)
   cxx_test(googletest-printers-test gtest_main)
   cxx_test(gtest_prod_test gtest_main
     test/production.cc)
-  cxx_test(gtest_repeat_test gtest)
+  cxx_test(gtest_repeat_test sacado-gtest)
   cxx_test(gtest_sole_header_test gtest_main)
-  cxx_test(gtest_stress_test gtest)
+  cxx_test(gtest_stress_test sacado-gtest)
   cxx_test(googletest-test-part-test gtest_main)
-  cxx_test(gtest_throw_on_failure_ex_test gtest)
+  cxx_test(gtest_throw_on_failure_ex_test sacado-gtest)
   cxx_test(gtest-typed-test_test gtest_main
     test/gtest-typed-test2_test.cc)
   cxx_test(gtest_unittest gtest_main)
-  cxx_test(gtest-unittest-api_test gtest)
+  cxx_test(gtest-unittest-api_test sacado-gtest)
   cxx_test(gtest_skip_in_environment_setup_test gtest_main)
   cxx_test(gtest_skip_test gtest_main)
 
@@ -249,10 +249,10 @@ if (gtest_build_tests)
 
   cxx_test_with_flags(gtest-death-test_ex_nocatch_test
     "${cxx_exception} -DGTEST_ENABLE_CATCH_EXCEPTIONS_=0"
-    gtest test/googletest-death-test_ex_test.cc)
+    sacado-gtest test/googletest-death-test_ex_test.cc)
   cxx_test_with_flags(gtest-death-test_ex_catch_test
     "${cxx_exception} -DGTEST_ENABLE_CATCH_EXCEPTIONS_=1"
-    gtest test/googletest-death-test_ex_test.cc)
+    sacado-gtest test/googletest-death-test_ex_test.cc)
 
   cxx_test_with_flags(gtest_no_rtti_unittest "${cxx_no_rtti}"
     gtest_main_no_rtti test/gtest_unittest.cc)
