Silence configure warning from KokkosKernels
User Support Ticket(s) or Story Referenced: N/A

--- a/packages/framework/ini-files/config-specs.ini
+++ b/packages/framework/ini-files/config-specs.ini
@@ -1926,6 +1926,7 @@ use RHEL7_SEMS_LIB-TYPE|STATIC
 use KOKKOS-ARCH|VOLTA70
 use RHEL7_SEMS_USE-ASAN|NO_USE-FPIC|NO_USE-MPI|YES_USE-PT|NO
 use USE-COMPLEX|YES
+opt-set-cmake-var CMAKE_CXX_USE_RESPONSE_FILE_FOR_OBJECTS BOOL CACHE FORCE : ON
 use USE-RDC|NO
 use USE-UVM|NO
 use USE-DEPRECATED|YES
@@ -2024,6 +2025,7 @@ use RHEL7_SEMS_LIB-TYPE|STATIC
 use KOKKOS-ARCH|VOLTA70
 use RHEL7_SEMS_USE-ASAN|NO_USE-FPIC|NO_USE-MPI|YES_USE-PT|NO
 use USE-COMPLEX|YES
+opt-set-cmake-var CMAKE_CXX_USE_RESPONSE_FILE_FOR_OBJECTS BOOL CACHE FORCE : ON
 use USE-RDC|NO
 use USE-UVM|YES
 use USE-DEPRECATED|YES
