GenConfig: add CTS1 configuration

--- a/packages/framework/ini-files/supported-envs.ini
+++ b/packages/framework/ini-files/supported-envs.ini
@@ -138,6 +138,10 @@
 #
 #------------------------------------------------------------------------------
 
+[cts1]
+aue-gnu-10.3.0-openmpi-4.1.4
+sparc-intel-2021.3.0-openmpi-4.0.5
+
 [rhel7]
 sems-gnu-7.2.0-anaconda3-serial:
     gnu-7.2.0-anaconda3-nompi
