--- a/packages/framework/ini-files/config-specs.ini
+++ b/packages/framework/ini-files/config-specs.ini
@@ -1647,6 +1647,35 @@ use USE-MPI|NO
 use USE-PT|NO
 use PACKAGE-ENABLES|PR-FRAMEWORK
 
+[CTS1]
+use COMMON
+
+[cts1_sparc-intel-2021.3.0-openmpi-4.0.5_debug_static_BDW_asan_no-complex_fpic_mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
+use CTS1
+use BUILD-TYPE|DEBUG
+use LIB-TYPE|STATIC
+use KOKKOS-ARCH|BDW
+use USE-ASAN|NO
+use USE-COMPLEX|YES
+use USE-FPIC|YES
+use USE-MPI|YES
+use USE-PT|NO
+use USE-RDC|NO
+use USE-UVM|NO
+use USE-DEPRECATED|YES
+use PACKAGE-ENABLES|NO-PACKAGE-ENABLES
+
+opt-set-cmake-var TPL_ENABLE_Scotch   BOOL FORCE : OFF
+opt-set-cmake-var TPL_ENABLE_ParMETIS BOOL FORCE : OFF
+opt-set-cmake-var TPL_ENABLE_SuperLU  BOOL FORCE : OFF
+opt-set-cmake-var TPL_ENABLE_BLAS     BOOL FORCE : OFF
+opt-set-cmake-var TPL_ENABLE_LAPACK   BOOL FORCE : OFF
+opt-set-cmake-var TPL_ENABLE_HDF5     BOOL FORCE : OFF
+
+[cts1_sparc-intel-2021.3.0-openmpi-4.0.5_debug_static_BDW_asan_no-complex_fpic_mpi_no-pt_no-rdc_no-uvm_deprecated-on_all]
+use cts1_sparc-intel-2021.3.0-openmpi-4.0.5_debug_static_BDW_asan_no-complex_fpic_mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables
+use PACKAGE-ENABLES|ALL
+
 [SEMS_COMMON_CUDA_11]
 # TPL ENABLE/DISABLE settings
 opt-set-cmake-var TPL_ENABLE_BLAS BOOL FORCE : ON
