--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -68,9 +68,7 @@ jobs:
     #   If the Autobuild fails above, remove it and uncomment the following three lines.
     #   modify them (or add more) to build your code if your project, please refer to the EXAMPLE below for guidance.
 
-    - if: matrix.language == 'cpp'
-      name: Build
-      run: |
+    - run: |
         mkdir mybuild
         cd mybuild
         cmake -DTrilinos_ENABLE_ALL_PACKAGES=ON ..
