--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -17,8 +17,8 @@ on:
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "develop", "master" ]
-  schedule:
-    - cron: '0 0 * * *'
+#  schedule:
+#    - cron: '0 0 * * *'
 
 jobs:
   analyze:
@@ -71,7 +71,7 @@ jobs:
     - run: |
         mkdir mybuild
         cd mybuild
-        cmake -DTrilinos_ENABLE_ALL_PACKAGES=ON -DTPL_ENABLE_Boost=OFF -DTrilinos_ENABLE_SEACAS=OFF ..
+        cmake -DTrilinos_ENABLE_ALL_PACKAGES=OFF -DTrilinos_ENABLE_Tpetra=ON -DTrilinos_ENABLE_Muelu=ON -DTPL_ENABLE_Boost=OFF -DTrilinos_ENABLE_SEACAS=OFF ..
         make -j4
 
     - name: Perform CodeQL Analysis
