Clean up LIB-TYPE
Remove all RHEL7/RHEL8 labels, since none of this is RHEL-version
specific.  Relabel as SEMS vs SEMSv2 as that is the delimiter.

Signed-off-by: Samuel E. Browne <sebrown@sandia.gov>

--- a/packages/framework/ini-files/config-specs.ini
+++ b/packages/framework/ini-files/config-specs.ini
@@ -528,15 +528,35 @@ opt-set-cmake-var Kokkos_ENABLE_DEBUG              BOOL   : ON
 [LIB-TYPE|STATIC]
 opt-set-cmake-var BUILD_SHARED_LIBS      BOOL   : OFF
 opt-set-cmake-var TPL_FIND_SHARED_LIBS   BOOL   : OFF
-opt-set-cmake-var TPL_Boost_LIBRARIES    STRING : ${SEMS_BOOST_LIBRARY_PATH|ENV}/libboost_program_options.a;${SEMS_BOOST_LIBRARY_PATH|ENV}/libboost_system.a
-opt-set-cmake-var TPL_BoostLib_LIBRARIES STRING : ${SEMS_BOOST_LIBRARY_PATH|ENV}/libboost_program_options.a;${SEMS_BOOST_LIBRARY_PATH|ENV}/libboost_system.a
 
 [LIB-TYPE|SHARED]
 opt-set-cmake-var BUILD_SHARED_LIBS      BOOL   : ON
 opt-set-cmake-var TPL_FIND_SHARED_LIBS   BOOL   : ON
+
+[SEMS_LIB-TYPE|STATIC]
+use LIB-TYPE|STATIC
+opt-set-cmake-var TPL_Boost_LIBRARIES    STRING : ${SEMS_BOOST_LIBRARY_PATH|ENV}/libboost_program_options.a;${SEMS_BOOST_LIBRARY_PATH|ENV}/libboost_system.a
+opt-set-cmake-var TPL_BoostLib_LIBRARIES STRING : ${SEMS_BOOST_LIBRARY_PATH|ENV}/libboost_program_options.a;${SEMS_BOOST_LIBRARY_PATH|ENV}/libboost_system.a
+# Use .so's rather than .a's here due to missing HDF5 symbols
+opt-set-cmake-var TPL_HDF5_LIBRARIES STRING : ${SEMS_HDF5_LIBRARY_PATH|ENV}/libhdf5_hl.so;${SEMS_HDF5_LIBRARY_PATH|ENV}/libhdf5.so;${SEMS_ZLIB_LIBRARY_PATH|ENV}/libz.so;-ldl
+
+[SEMS_LIB-TYPE|SHARED]
+use LIB-TYPE|SHARED
 opt-set-cmake-var TPL_Boost_LIBRARIES    STRING : ${SEMS_BOOST_LIBRARY_PATH|ENV}/libboost_program_options.so;${SEMS_BOOST_LIBRARY_PATH|ENV}/libboost_system.so
 opt-set-cmake-var TPL_BoostLib_LIBRARIES STRING : ${SEMS_BOOST_LIBRARY_PATH|ENV}/libboost_program_options.so;${SEMS_BOOST_LIBRARY_PATH|ENV}/libboost_system.so
+opt-set-cmake-var TPL_HDF5_LIBRARIES STRING : ${SEMS_HDF5_LIBRARY_PATH|ENV}/libhdf5_hl.so;${SEMS_HDF5_LIBRARY_PATH|ENV}/libhdf5.so;${SEMS_ZLIB_LIBRARY_PATH|ENV}/libz.so;-ldl
 
+[SEMS_V2_LIB-TYPE|STATIC]
+use LIB-TYPE|STATIC
+opt-set-cmake-var TPL_Boost_LIBRARIES    STRING : ${BOOST_LIB|ENV}/libboost_program_options.a;${BOOST_LIB|ENV}/libboost_system.a
+opt-set-cmake-var TPL_BoostLib_LIBRARIES STRING : ${BOOST_LIB|ENV}/libboost_program_options.a;${BOOST_LIB|ENV}/libboost_system.a
+opt-set-cmake-var TPL_HDF5_LIBRARIES STRING : ${HDF5_LIB|ENV}/libhdf5_hl.a;${HDF5_LIB|ENV}/libhdf5.a;${ZLIB_LIB|ENV}/libz.a;-ldl
+
+[SEMS_V2_LIB-TYPE|SHARED]
+use LIB-TYPE|SHARED
+opt-set-cmake-var TPL_Boost_LIBRARIES    STRING : ${BOOST_LIB|ENV}/libboost_program_options.so;${BOOST_LIB|ENV}/libboost_system.so
+opt-set-cmake-var TPL_BoostLib_LIBRARIES STRING : ${BOOST_LIB|ENV}/libboost_program_options.so;${BOOST_LIB|ENV}/libboost_system.so
+opt-set-cmake-var TPL_HDF5_LIBRARIES STRING : ${HDF5_LIB|ENV}/libhdf5_hl.so;${HDF5_LIB|ENV}/libhdf5.so;${ZLIB_LIB|ENV}/libz.so;-ldl
 
 
 #
@@ -1596,32 +1616,6 @@ opt-set-cmake-var TPL_LAPACK_LIBRARIES STRING : -mkl
 [RHEL8_COMPILER|CUDA]
 use RHEL7_COMPILER|CUDA
 
-[RHEL7_SEMS_LIB-TYPE|STATIC]
-use LIB-TYPE|STATIC
-# Use .so's rather than .a's here due to missing HDF5 symbols
-opt-set-cmake-var TPL_HDF5_LIBRARIES STRING : ${SEMS_HDF5_LIBRARY_PATH|ENV}/libhdf5_hl.so;${SEMS_HDF5_LIBRARY_PATH|ENV}/libhdf5.so;${SEMS_ZLIB_LIBRARY_PATH|ENV}/libz.so;-ldl
-
-[RHEL7_SEMS_LIB-TYPE|SHARED]
-use LIB-TYPE|SHARED
-opt-set-cmake-var TPL_HDF5_LIBRARIES STRING : ${SEMS_HDF5_LIBRARY_PATH|ENV}/libhdf5_hl.so;${SEMS_HDF5_LIBRARY_PATH|ENV}/libhdf5.so;${SEMS_ZLIB_LIBRARY_PATH|ENV}/libz.so;-ldl
-
-[RHEL8_SEMS_LIB-TYPE|STATIC]
-use LIB-TYPE|STATIC
-
-[RHEL8_SEMS_LIB-TYPE|SHARED]
-use LIB-TYPE|SHARED
-
-[RHEL8_LIB-TYPE|SHARED]
-use LIB-TYPE|SHARED
-
-[RHEL7_SEMS_V2_LIB-TYPE|STATIC]
-use LIB-TYPE|STATIC
-opt-set-cmake-var TPL_HDF5_LIBRARIES STRING : ${HDF5_LIB|ENV}/libhdf5_hl.a;${HDF5_LIB|ENV}/libhdf5.a;${ZLIB_LIB|ENV}/libz.a;-ldl
-
-[RHEL7_SEMS_V2_LIB-TYPE|SHARED]
-use LIB-TYPE|SHARED
-opt-set-cmake-var TPL_HDF5_LIBRARIES STRING : ${HDF5_LIB|ENV}/libhdf5_hl.so;${HDF5_LIB|ENV}/libhdf5.so;${ZLIB_LIB|ENV}/libz.so;-ldl
-
 [RHEL7_SEMS_COMPILER|CUDA_LIB-TYPE|SHARED_USE-COMPLEX|YES]
 opt-set-cmake-var CXX_USE_RESPONSE_FILE_FOR_OBJECTS BOOL : OFF
 
@@ -1772,7 +1766,7 @@ opt-set-cmake-var ShyLU_DD_CXX_FLAGS STRING : ${CMAKE_CXX_FLAGS|CMAKE} -Wno-erro
 use RHEL7_SEMS_COMPILER|GNU
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|DEBUG
-use RHEL7_SEMS_LIB-TYPE|SHARED
+use SEMS_LIB-TYPE|SHARED
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 use RHEL7_SEMS_USE-ASAN|NO_USE-FPIC|NO_USE-MPI|NO_USE-PT|NO_PACKAGE-ENABLES|PR-FRAMEWORK
 use USE-COMPLEX|NO
@@ -1829,7 +1823,7 @@ use RHEL7_POST
 use RHEL7_SEMS_COMPILER|GNU
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|DEBUG
-use RHEL7_SEMS_LIB-TYPE|SHARED
+use SEMS_LIB-TYPE|SHARED
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 use RHEL7_SEMS_USE-ASAN|NO_USE-FPIC|NO_USE-MPI|YES_USE-PT|NO
 use USE-COMPLEX|NO
@@ -1913,7 +1907,7 @@ use PACKAGE-ENABLES|ALL
 use RHEL7_SEMS_COMPILER|GNU
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|RELEASE-DEBUG
-use RHEL7_SEMS_LIB-TYPE|SHARED
+use SEMS_LIB-TYPE|SHARED
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 use RHEL7_SEMS_USE-ASAN|NO_USE-FPIC|NO_USE-MPI|NO_USE-PT|NO
 use PACKAGE-ENABLES|NO-PACKAGE-ENABLES
@@ -1947,7 +1941,7 @@ use PACKAGE-ENABLES|ALL-NO-EPETRA
 use RHEL7_SEMS_COMPILER|GNU
 use NODE-TYPE|OPENMP
 use BUILD-TYPE|RELEASE-DEBUG
-use RHEL7_SEMS_LIB-TYPE|STATIC
+use SEMS_LIB-TYPE|STATIC
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 use RHEL7_SEMS_USE-ASAN|NO_USE-FPIC|NO_USE-MPI|YES_USE-PT|NO
 use USE-COMPLEX|NO
@@ -1977,7 +1971,7 @@ use PACKAGE-ENABLES|ALL
 use RHEL7_SEMS_COMPILER|CLANG
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|RELEASE-DEBUG
-use RHEL7_SEMS_LIB-TYPE|SHARED
+use SEMS_LIB-TYPE|SHARED
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 use RHEL7_SEMS_USE-ASAN|NO_USE-FPIC|NO_USE-MPI|YES_USE-PT|NO
 use USE-COMPLEX|NO
@@ -2051,7 +2045,7 @@ use PACKAGE-ENABLES|ALL
 use RHEL7_SEMS_COMPILER|CLANG
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|RELEASE-DEBUG
-use RHEL7_SEMS_V2_LIB-TYPE|SHARED
+use SEMS_V2_LIB-TYPE|SHARED
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 use RHEL7_SEMS_USE-ASAN|NO_USE-FPIC|NO_USE-MPI|YES_USE-PT|NO
 use USE-COMPLEX|NO
@@ -2085,7 +2079,7 @@ use PACKAGE-ENABLES|ALL
 use RHEL7_SEMS_COMPILER|INTEL
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|RELEASE-DEBUG
-use RHEL7_SEMS_LIB-TYPE|SHARED
+use SEMS_LIB-TYPE|SHARED
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 use RHEL7_SEMS_USE-ASAN|NO_USE-FPIC|YES_USE-MPI|YES_USE-PT|NO
 use USE-COMPLEX|NO
@@ -2129,7 +2123,7 @@ use RHEL7_POST
 # uses sems-v2 modules
 use RHEL7_COMPILER|INTEL
 use BUILD-TYPE|RELEASE-DEBUG
-use RHEL7_SEMS_LIB-TYPE|SHARED
+use SEMS_LIB-TYPE|SHARED
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 use USE-ASAN|NO
 use USE-COMPLEX|NO
@@ -2206,7 +2200,7 @@ use PACKAGE-ENABLES|ALL
 use RHEL7_SEMS_COMPILER|CUDA
 use NODE-TYPE|CUDA
 use BUILD-TYPE|RELEASE
-use RHEL7_SEMS_LIB-TYPE|STATIC
+use SEMS_LIB-TYPE|STATIC
 use KOKKOS-ARCH|VOLTA70
 use RHEL7_SEMS_USE-ASAN|NO_USE-FPIC|NO_USE-MPI|YES_USE-PT|NO
 use USE-COMPLEX|YES
@@ -2319,7 +2313,7 @@ use PACKAGE-ENABLES|ALL-NO-EPETRA
 use RHEL7_SEMS_COMPILER|CUDA
 use NODE-TYPE|CUDA
 use BUILD-TYPE|RELEASE
-use RHEL7_SEMS_LIB-TYPE|STATIC
+use SEMS_LIB-TYPE|STATIC
 use KOKKOS-ARCH|VOLTA70
 use RHEL7_SEMS_USE-ASAN|NO_USE-FPIC|NO_USE-MPI|YES_USE-PT|NO
 use USE-COMPLEX|YES
@@ -2357,7 +2351,7 @@ opt-set-cmake-var ROL_example_PinT_parabolic-control_AugmentedSystem_test_MPI_2_
 use RHEL8_COMPILER|CUDA
 use NODE-TYPE|CUDA
 use BUILD-TYPE|RELEASE
-use RHEL8_SEMS_LIB-TYPE|STATIC
+use SEMS_LIB-TYPE|STATIC
 use KOKKOS-ARCH|VOLTA70
 use USE-ASAN|NO
 use USE-FPIC|NO
@@ -2467,7 +2461,7 @@ use PACKAGE-ENABLES|ALL-NO-EPETRA
 # uses asc-do modules
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|DEBUG
-use RHEL7_SEMS_LIB-TYPE|SHARED
+use SEMS_LIB-TYPE|SHARED
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 use USE-ASAN|NO
 use USE-COMPLEX|NO
@@ -2499,7 +2493,7 @@ use PACKAGE-ENABLES|ALL
 # uses asc-do modules
 use NODE-TYPE|OPENMP
 use BUILD-TYPE|DEBUG
-use RHEL7_SEMS_LIB-TYPE|SHARED
+use SEMS_LIB-TYPE|SHARED
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 use USE-ASAN|NO
 use USE-COMPLEX|NO
@@ -2533,7 +2527,7 @@ use PACKAGE-ENABLES|ALL
 # uses asc-do modules
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|DEBUG
-use RHEL7_SEMS_LIB-TYPE|SHARED
+use SEMS_LIB-TYPE|SHARED
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 use USE-ASAN|NO
 use USE-COMPLEX|NO
@@ -2568,7 +2562,7 @@ use PACKAGE-ENABLES|ALL
 # uses asc-do modules
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|DEBUG
-use RHEL7_SEMS_LIB-TYPE|SHARED
+use SEMS_LIB-TYPE|SHARED
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 use USE-ASAN|NO
 use USE-COMPLEX|NO
@@ -2600,7 +2594,7 @@ use PACKAGE-ENABLES|ALL
 # uses asc-do modules
 use NODE-TYPE|OPENMP
 use BUILD-TYPE|DEBUG
-use RHEL7_SEMS_LIB-TYPE|SHARED
+use SEMS_LIB-TYPE|SHARED
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 use USE-ASAN|NO
 use USE-COMPLEX|NO
@@ -2634,7 +2628,7 @@ use PACKAGE-ENABLES|ALL
 # uses asc-do modules
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|DEBUG
-use RHEL7_SEMS_LIB-TYPE|SHARED
+use SEMS_LIB-TYPE|SHARED
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 use USE-ASAN|NO
 use USE-COMPLEX|NO
@@ -2666,7 +2660,7 @@ use PACKAGE-ENABLES|ALL
 use RHEL7_SEMS_COMPILER|GNU
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|DEBUG
-use RHEL7_SEMS_V2_LIB-TYPE|SHARED
+use SEMS_V2_LIB-TYPE|SHARED
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 use USE-ASAN|NO
 use USE-COMPLEX|NO
@@ -2717,7 +2711,7 @@ use RHEL7_SEMS_COMPILER|GNU
 
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|RELEASE-DEBUG
-use RHEL7_SEMS_V2_LIB-TYPE|SHARED
+use SEMS_V2_LIB-TYPE|SHARED
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 use USE-ASAN|NO
 use USE-COMPLEX|NO
@@ -2775,7 +2769,7 @@ use PACKAGE-ENABLES|ALL
 use RHEL7_SEMS_COMPILER|GNU
 use NODE-TYPE|OPENMP
 use BUILD-TYPE|RELEASE-DEBUG
-use RHEL7_SEMS_V2_LIB-TYPE|STATIC
+use SEMS_V2_LIB-TYPE|STATIC
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 use USE-COMPLEX|NO
 use USE-ASAN|NO
@@ -2808,7 +2802,7 @@ use COMPILER|GNU
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|DEBUG
 
-use RHEL8_LIB-TYPE|SHARED
+use LIB-TYPE|SHARED
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 
 use USE-ASAN|NO
@@ -2864,7 +2858,7 @@ use COMPILER|GNU
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|RELEASE-DEBUG
 
-use RHEL8_LIB-TYPE|SHARED
+use LIB-TYPE|SHARED
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 
 use USE-ASAN|NO
@@ -2905,7 +2899,7 @@ use COMPILER|GNU
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|DEBUG
 
-use RHEL8_LIB-TYPE|SHARED
+use LIB-TYPE|SHARED
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 
 use USE-ASAN|NO
