Consolidate all RHELX_COMPILER blocks
RHEL8 and RHEL7 are/were the same, specifying differences prematurely is
unnecessary.

Signed-off-by: Samuel E. Browne <sebrown@sandia.gov>

--- a/packages/framework/ini-files/config-specs.ini
+++ b/packages/framework/ini-files/config-specs.ini
@@ -1565,7 +1565,7 @@ opt-set-cmake-var ShyLU_DDFROSch_test_thyra_xpetra_laplace_TLP_RGDSW_DIM2_DPN1_O
 opt-set-cmake-var ShyLU_DDFROSch_test_thyra_xpetra_laplace_TLP_RGDSW_DIM2_DPN2_ORD0_TPETRA_MPI_4_DISABLE BOOL : ON
 opt-set-cmake-var ShyLU_DDFROSch_test_thyra_xpetra_laplace_TLP_RGDSW_DIM2_DPN2_ORD1_TPETRA_MPI_4_DISABLE BOOL : ON
 
-[RHEL7_COMPILER|CUDA]
+[COMPILER|CUDA]
 use NODE-TYPE|CUDA
 opt-set-cmake-var MPI_EXEC                  FILEPATH     : mpiexec
 opt-set-cmake-var TPL_BLAS_LIBRARY_DIRS     STRING FORCE : ${CBLAS_ROOT|ENV}/lib
@@ -1576,14 +1576,11 @@ opt-set-cmake-var TPL_LAPACK_LIBRARIES      STRING FORCE : -L${LAPACK_ROOT|ENV}/
 [COMPILER|GNU]
 opt-set-cmake-var MPI_EXEC FILEPATH : mpirun
 
-[RHEL7_COMPILER|GNU]
-use COMPILER|GNU
-
-[RHEL7_COMPILER|INTEL]
+[COMPILER|INTEL]
 opt-set-cmake-var MPI_EXEC FILEPATH : mpirun
 
-[RHEL7_COMPILER|CUDA_USE-COMPLEX|YES]
-use RHEL7_COMPILER|CUDA
+[COMPILER|CUDA_USE-COMPLEX|YES]
+use COMPILER|CUDA
 use USE-COMPLEX|YES
 opt-set-cmake-var Teuchos_ENABLE_COMPLEX BOOL : ON
 opt-set-cmake-var Tpetra_INST_COMPLEX_DOUBLE BOOL : ON
@@ -1591,18 +1588,15 @@ opt-set-cmake-var Tpetra_INST_COMPLEX_DOUBLE BOOL : ON
 [RHEL7_SEMS_COMPILER|CLANG]
 
 [RHEL7_SEMS_COMPILER|CUDA]
-use RHEL7_COMPILER|CUDA
+use COMPILER|CUDA
 
 [RHEL7_SEMS_COMPILER|GNU]
-use RHEL7_COMPILER|GNU
+use COMPILER|GNU
 
 [RHEL7_SEMS_COMPILER|INTEL]
-use RHEL7_COMPILER|INTEL
+use COMPILER|INTEL
 opt-set-cmake-var TPL_BLAS_LIBRARIES   STRING : -mkl
 opt-set-cmake-var TPL_LAPACK_LIBRARIES STRING : -mkl
-
-[RHEL8_COMPILER|CUDA]
-use RHEL7_COMPILER|CUDA
 
 [RHEL7_SEMS_COMPILER|CUDA_LIB-TYPE|SHARED_USE-COMPLEX|YES]
 opt-set-cmake-var CXX_USE_RESPONSE_FILE_FOR_OBJECTS BOOL : OFF
@@ -2109,7 +2103,7 @@ opt-set-cmake-var Zoltan2_scotch_example_MPI_4_DISABLE BOOL : ON
 
 [rhel7_sems-intel-2021.3-sems-openmpi-4.0.5_release-debug_shared_no-kokkos-arch_no-asan_no-complex_fpic_mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
 # uses sems-v2 modules
-use RHEL7_COMPILER|INTEL
+use COMPILER|INTEL
 use BUILD-TYPE|RELEASE-DEBUG
 use SEMS_LIB-TYPE|SHARED
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
@@ -2336,7 +2330,7 @@ opt-set-cmake-var ROL_example_PinT_parabolic-control_AugmentedSystem_test_MPI_2_
 
 [rhel8_sems-cuda-11.4.2-sems-gnu-10.1.0-sems-openmpi-4.1.4_release_static_Volta70_no-asan_complex_no-fpic_mpi_pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
 # uses sems-v2 modules
-use RHEL8_COMPILER|CUDA
+use COMPILER|CUDA
 use NODE-TYPE|CUDA
 use BUILD-TYPE|RELEASE
 use SEMS_LIB-TYPE|STATIC
