Consolidate/restructure all SEMS_COMPILER blocks
Signed-off-by: Samuel E. Browne <sebrown@sandia.gov>

--- a/packages/framework/ini-files/config-specs.ini
+++ b/packages/framework/ini-files/config-specs.ini
@@ -1579,24 +1579,17 @@ opt-set-cmake-var MPI_EXEC FILEPATH : mpirun
 [COMPILER|INTEL]
 opt-set-cmake-var MPI_EXEC FILEPATH : mpirun
 
+[MKL_VIA_INTEL_COMPILER_FLAGS]
+opt-set-cmake-var TPL_BLAS_LIBRARIES   STRING : -mkl
+opt-set-cmake-var TPL_LAPACK_LIBRARIES STRING : -mkl
+
 [COMPILER|CUDA_USE-COMPLEX|YES]
 use COMPILER|CUDA
 use USE-COMPLEX|YES
 opt-set-cmake-var Teuchos_ENABLE_COMPLEX BOOL : ON
 opt-set-cmake-var Tpetra_INST_COMPLEX_DOUBLE BOOL : ON
 
-[RHEL7_SEMS_COMPILER|CUDA]
-use COMPILER|CUDA
-
-[RHEL7_SEMS_COMPILER|GNU]
-use COMPILER|GNU
-
-[RHEL7_SEMS_COMPILER|INTEL]
-use COMPILER|INTEL
-opt-set-cmake-var TPL_BLAS_LIBRARIES   STRING : -mkl
-opt-set-cmake-var TPL_LAPACK_LIBRARIES STRING : -mkl
-
-[RHEL7_SEMS_COMPILER|CUDA_LIB-TYPE|SHARED_USE-COMPLEX|YES]
+[COMPILER|CUDA_LIB-TYPE|SHARED_USE-COMPLEX|YES]
 opt-set-cmake-var CXX_USE_RESPONSE_FILE_FOR_OBJECTS BOOL : OFF
 
 [RHEL7_SEMS_USE-ASAN|NO_USE-FPIC|NO_USE-MPI|YES_USE-PT|NO]
@@ -1743,7 +1736,7 @@ opt-set-cmake-var ShyLU_DD_CXX_FLAGS STRING : ${CMAKE_CXX_FLAGS|CMAKE} -Wno-erro
 
 [rhel7_sems-gnu-7.2.0-anaconda3-serial_debug_shared_no-kokkos-arch_no-asan_no-complex_no-fpic_no-mpi_no-pt_no-rdc_no-uvm_deprecated-on_pr-framework]
 #uses sems-archive modules
-use RHEL7_SEMS_COMPILER|GNU
+use COMPILER|GNU
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|DEBUG
 use SEMS_LIB-TYPE|SHARED
@@ -1800,7 +1793,7 @@ opt-set-cmake-var Trilinos_ENABLE_BUILD_STATS BOOL FORCE   : OFF
 
 [rhel7_sems-gnu-8.3.0-openmpi-1.10.1-serial_debug_shared_no-kokkos-arch_no-asan_no-complex_no-fpic_mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
 #uses sems-archive modules
-use RHEL7_SEMS_COMPILER|GNU
+use COMPILER|GNU
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|DEBUG
 use SEMS_LIB-TYPE|SHARED
@@ -1884,7 +1877,7 @@ use PACKAGE-ENABLES|ALL
 
 [rhel7_sems-gnu-8.3.0-serial_release-debug_shared_no-kokkos-arch_no-asan_no-complex_no-fpic_no-mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
 #uses sems-archive modules
-use RHEL7_SEMS_COMPILER|GNU
+use COMPILER|GNU
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|RELEASE-DEBUG
 use SEMS_LIB-TYPE|SHARED
@@ -1918,7 +1911,7 @@ use PACKAGE-ENABLES|ALL-NO-EPETRA
 
 [rhel7_sems-gnu-8.3.0-openmpi-1.10.1-openmp_release-debug_static_no-kokkos-arch_no-asan_no-complex_no-fpic_mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
 #uses sems-archive modules
-use RHEL7_SEMS_COMPILER|GNU
+use COMPILER|GNU
 use NODE-TYPE|OPENMP
 use BUILD-TYPE|RELEASE-DEBUG
 use SEMS_LIB-TYPE|STATIC
@@ -2054,7 +2047,8 @@ use PACKAGE-ENABLES|ALL
 
 [rhel7_sems-intel-19.0.5-mpich-3.2-serial_release-debug_static_no-kokkos-arch_no-asan_no-complex_fpic_mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
 # JFRYE which modules is this using?
-use RHEL7_SEMS_COMPILER|INTEL
+use COMPILER|INTEL
+use MKL_VIA_INTEL_COMPILER_FLAGS
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|RELEASE-DEBUG
 use SEMS_LIB-TYPE|SHARED
@@ -2175,7 +2169,7 @@ use PACKAGE-ENABLES|ALL
 
 [rhel7_sems-cuda-11.4.2-sems-gnu-10.1.0-sems-openmpi-4.0.5_release_static_Volta70_no-asan_complex_no-fpic_mpi_pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
 # uses sems-v2 modules
-use RHEL7_SEMS_COMPILER|CUDA
+use COMPILER|CUDA
 use NODE-TYPE|CUDA
 use BUILD-TYPE|RELEASE
 use SEMS_LIB-TYPE|STATIC
@@ -2288,7 +2282,7 @@ use PACKAGE-ENABLES|ALL-NO-EPETRA
 
 [rhel7_sems-cuda-11.4.2-sems-gnu-10.1.0-sems-openmpi-4.0.5_release_static_Volta70_no-asan_complex_no-fpic_mpi_pt_no-rdc_uvm_deprecated-on_no-package-enables]
 # uses sems-v2 modules
-use RHEL7_SEMS_COMPILER|CUDA
+use COMPILER|CUDA
 use NODE-TYPE|CUDA
 use BUILD-TYPE|RELEASE
 use SEMS_LIB-TYPE|STATIC
@@ -2635,7 +2629,7 @@ use PACKAGE-ENABLES|ALL
 ####### under Testing #######
 [rhel7_sems-gnu-8.5.0-openmpi-4.1.6-serial_debug_shared_no-kokkos-arch_no-asan_no-complex_no-fpic_mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
 # uses sems-v2 modules
-use RHEL7_SEMS_COMPILER|GNU
+use COMPILER|GNU
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|DEBUG
 use SEMS_V2_LIB-TYPE|SHARED
@@ -2685,7 +2679,7 @@ opt-set-cmake-var CMAKE_CXX_STANDARD             STRING FORCE : 20
 
 [rhel7_sems-v2-gnu-8.3.0-serial_release-debug_shared_no-kokkos-arch_no-asan_no-complex_no-fpic_no-mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
 # uses sems-v2 modules
-use RHEL7_SEMS_COMPILER|GNU
+use COMPILER|GNU
 
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|RELEASE-DEBUG
@@ -2744,7 +2738,7 @@ use PACKAGE-ENABLES|ALL
 
 [rhel7_sems-gnu-8.3.0-openmpi-1.10.7-openmp_release-debug_static_no-kokkos-arch_no-asan_no-complex_no-fpic_mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
 # uses sems-v2 modules
-use RHEL7_SEMS_COMPILER|GNU
+use COMPILER|GNU
 use NODE-TYPE|OPENMP
 use BUILD-TYPE|RELEASE-DEBUG
 use SEMS_V2_LIB-TYPE|STATIC
