--- a/packages/framework/ini-files/config-specs.ini
+++ b/packages/framework/ini-files/config-specs.ini
@@ -317,7 +317,34 @@ opt-set-cmake-var Trilinos_ENABLE_ALL_FORWARD_DEP_PACKAGES BOOL : ON
 opt-set-cmake-var Trilinos_ENABLE_EXPLICIT_INSTANTIATION BOOL : ON
 opt-set-cmake-var Teuchos_ENABLE_DEFAULT_STACKTRACE BOOL : OFF
 
-# Options from cmake/std/BasicCiTestingSettings.cmake
+# Disable long-failing Piro test until it can be fixed (#826)
+opt-set-cmake-var Piro_EpetraSolver_MPI_4_DISABLE BOOL : ON
+
+# Disable randomly failing ROL test until it can be fixed
+opt-set-cmake-var ROL_test_algorithm_TypeP_CompareTypeU_MPI_1_DISABLE BOOL : ON
+
+# Disable tests that timeout in PR testing until it can be fixed (#4614)
+opt-set-cmake-var PanzerAdaptersSTK_PoissonInterfaceExample_2d_diffsideids_MPI_1_DISABLE BOOL : ON
+
+# Disable long-failing Anazazi test until it can be fixed (#3585)
+opt-set-cmake-var Anasazi_Epetra_OrthoManagerGenTester_0_MPI_4_DISABLE BOOL : ON
+
+# Disable Random_XorShift64 and Random_XorShift1024 due to random failures. See #3282.
+opt-set-cmake-var Kokkos_AlgorithmsUnitTest_MPI_1_EXTRA_ARGS STRING : --gtest_filter=-*Random_XorShift64:-*Random_XorShift1024
+
+# Disable this test due to temporary requirement on Kokkos_ENABLE_DEPRECATED_CODE_3
+opt-set-cmake-var Kokkos_CoreUnitTest_Serial1_MPI_1_EXTRA_ARGS STRING : --gtest_filter=-*join_backward_compatibility
+opt-set-cmake-var Kokkos_CoreUnitTest_Serial1_EXTRA_ARGS STRING : --gtest_filter=-*join_backward_compatibility
+# Disable this test to avoid spurious failures, see kokkos/kokkos#5502
+opt-set-cmake-var Kokkos_CoreUnitTest_Default_MPI_1_EXTRA_ARGS STRING : --gtest_filter=-*defaultdevicetype.shared_space
+opt-set-cmake-var Kokkos_CoreUnitTest_Default_EXTRA_ARGS STRING : --gtest_filter=-*defaultdevicetype.shared_space
+
+# Build stats compiler wrappers (#7376)
+# Commented out due to: "make[2]: execvp: /bin/sh: Argument list too long" when compiling packages/panzer/adapters-stk
+#    opt-set-cmake-var Trilinos_REMOVE_BUILD_STATS_TIMING_FILES_ON_FRESH_CONFIGURE BOOL : OFF
+
+
+[TPLS]
 opt-set-cmake-var Trilinos_TPL_SYSTEM_INCLUDE_DIRS BOOL : TRUE
 opt-set-cmake-var TPL_ENABLE_GLM BOOL : OFF
 opt-set-cmake-var TPL_ENABLE_Matio BOOL : OFF
@@ -338,31 +365,10 @@ opt-set-cmake-var TPL_ENABLE_Scotch BOOL : ON
 # Disable test that was enabled when Scotch TPL was enabled (#2051, #2052)
 opt-set-cmake-var Zoltan2_orderingTestDriverExample_MPI_1_DISABLE BOOL : ON
 
-# Disable long-failing Piro test until it can be fixed (#826)
-opt-set-cmake-var Piro_EpetraSolver_MPI_4_DISABLE BOOL : ON
-
-# Disable randomly failing ROL test until it can be fixed
-opt-set-cmake-var ROL_test_algorithm_TypeP_CompareTypeU_MPI_1_DISABLE BOOL : ON
-
-# Disable tests that timeout in PR testing until it can be fixed (#4614)
-opt-set-cmake-var PanzerAdaptersSTK_PoissonInterfaceExample_2d_diffsideids_MPI_1_DISABLE BOOL : ON
-
-# Disable long-failing Anazazi test until it can be fixed (#3585)
-opt-set-cmake-var Anasazi_Epetra_OrthoManagerGenTester_0_MPI_4_DISABLE BOOL : ON
-
-
-# Disable Random_XorShift64 and Random_XorShift1024 due to random failures. See #3282.
-opt-set-cmake-var Kokkos_AlgorithmsUnitTest_MPI_1_EXTRA_ARGS STRING : --gtest_filter=-*Random_XorShift64:-*Random_XorShift1024
-
-# Disable this test due to temporary requirement on Kokkos_ENABLE_DEPRECATED_CODE_3
-opt-set-cmake-var Kokkos_CoreUnitTest_Serial1_MPI_1_EXTRA_ARGS STRING : --gtest_filter=-*join_backward_compatibility
-opt-set-cmake-var Kokkos_CoreUnitTest_Serial1_EXTRA_ARGS STRING : --gtest_filter=-*join_backward_compatibility
-# Disable this test to avoid spurious failures, see kokkos/kokkos#5502
-opt-set-cmake-var Kokkos_CoreUnitTest_Default_MPI_1_EXTRA_ARGS STRING : --gtest_filter=-*defaultdevicetype.shared_space
-opt-set-cmake-var Kokkos_CoreUnitTest_Default_EXTRA_ARGS STRING : --gtest_filter=-*defaultdevicetype.shared_space
-
-# Options from SEMSDevEnv.cmake
 opt-set-cmake-var Trilinos_ENABLE_PyTrilinos BOOL : OFF
+
+[SEMS_V1_TPLS]
+use TPLS
 opt-set-cmake-var Boost_INCLUDE_DIRS PATH : ${SEMS_BOOST_INCLUDE_PATH|ENV}
 opt-set-cmake-var Boost_LIBRARY_DIRS PATH : ${SEMS_BOOST_LIBRARY_PATH|ENV}
 opt-set-cmake-var BoostLib_INCLUDE_DIRS PATH : ${SEMS_BOOST_INCLUDE_PATH|ENV}
@@ -380,19 +386,14 @@ opt-set-cmake-var SuperLU_LIBRARY_DIRS PATH : ${SEMS_SUPERLU_LIBRARY_PATH|ENV}
 opt-set-cmake-var TPL_Scotch_INCLUDE_DIRS PATH : ${SEMS_SCOTCH_INCLUDE_PATH|ENV}
 opt-set-cmake-var Scotch_LIBRARY_DIRS PATH : ${SEMS_SCOTCH_LIBRARY_PATH|ENV}
 
-# Build stats compiler wrappers (#7376)
-# Commented out due to: "make[2]: execvp: /bin/sh: Argument list too long" when compiling packages/panzer/adapters-stk
-#    opt-set-cmake-var Trilinos_REMOVE_BUILD_STATS_TIMING_FILES_ON_FRESH_CONFIGURE BOOL : OFF
-
 # Explicit libraries
 opt-set-cmake-var TPL_DLlib_LIBRARIES PATH : ${DL_LIBRARIES|ENV}
 opt-set-cmake-var TPL_Netcdf_LIBRARIES STRING : ${SEMS_NETCDF_LIBRARY_PATH|ENV}/libnetcdf.so;${SEMS_NETCDF_LIBRARY_PATH|ENV}/libpnetcdf.a
 opt-set-cmake-var TPL_BLAS_LIBRARIES STRING : ${BLAS_LIBRARIES|ENV}
 opt-set-cmake-var TPL_LAPACK_LIBRARIES STRING : ${LAPACK_LIBRARIES|ENV}
 
-[COMMON_SPACK_TPLS]
-use COMMON
-
+[SPACK_TPLS]
+use TPLS
 # BLAS & LAPACK
 opt-set-cmake-var TPL_BLAS_LIBRARIES STRING FORCE : -L${BLAS_ROOT|ENV}/lib;-lblas;-lgfortran;-lgomp
 opt-set-cmake-var TPL_BLAS_LIBRARY_DIRS STRING FORCE : ${BLAS_ROOT|ENV}/lib
@@ -445,35 +446,17 @@ opt-set-cmake-var TPL_METIS_LIBRARIES STRING FORCE : ${METIS_LIB|ENV}/libmetis.s
 opt-set-cmake-var Zlib_INCLUDE_DIRS PATH FORCE : ${ZLIB_INC|ENV}
 opt-set-cmake-var Zlib_LIBRARY_DIRS PATH FORCE : ${ZLIB_LIB|ENV}
 
-[COMMON_AUE_SPACK]
-use COMMON_SPACK_TPLS
+[AUE_TPLS]
+use TPLS
+use SPACK_TPLS
 
-# Overrides from [COMMON_SPACK_TPLS] to let container handle the values
+# Overrides from [SPACK_TPLS] to let container handle the values
 opt-set-cmake-var TPL_Netcdf_LIBRARIES STRING FORCE : ""
 opt-set-cmake-var TPL_BLAS_LIBRARIES   STRING FORCE : ""
 opt-set-cmake-var TPL_LAPACK_LIBRARIES STRING FORCE : ""
 opt-set-cmake-var TPL_HDF5_LIBRARIES   STRING FORCE : ""
 
 opt-set-cmake-var SuperLU_LIBRARY_NAMES STRING FORCE : superlu;m
-
-[COMMON_USE-MPI|NO]
-use COMMON
-opt-set-cmake-var TPL_ENABLE_ParMETIS BOOL FORCE : OFF
-opt-set-cmake-var TPL_ENABLE_Scotch   BOOL FORCE : OFF
-opt-set-cmake-var TPL_Netcdf_LIBRARIES STRING FORCE : ${SEMS_NETCDF_LIBRARY_PATH|ENV}/libnetcdf.so
-
-[COMMON_INTEL]
-use COMMON
-opt-set-cmake-var SuperLUDist_INCLUDE_DIRS PATH : ${SEMS_SUPERLU_DIST_INCLUDE_PATH|ENV}
-opt-set-cmake-var SuperLUDist_LIBRARY_DIRS PATH : ${SEMS_SUPERLU_DIST_LIBRARY_PATH|ENV}
-opt-set-cmake-var TPL_ENABLE_SuperLUDist BOOL : ON
-# Override TPL_ENABLE_SuperLU=ON from [COMMON]
-opt-set-cmake-var TPL_ENABLE_SuperLU BOOL FORCE : OFF
-
-opt-set-cmake-var Tpetra_INST_INT_INT BOOL : ON
-opt-set-cmake-var Trilinos_ENABLE_STKBalance BOOL FORCE : OFF
-#STK-TODO: try to remember to come back and remove this when stk-balance
-#is able to tolerate int as a global-index.
 
 
 #------------------------------------------------------------------------------
@@ -1866,7 +1849,10 @@ use USE-RDC|NO
 use USE-UVM|NO
 use USE-DEPRECATED|YES
 
-use COMMON_USE-MPI|NO
+use COMMON
+opt-set-cmake-var TPL_ENABLE_ParMETIS BOOL FORCE : OFF
+opt-set-cmake-var TPL_ENABLE_Scotch   BOOL FORCE : OFF
+opt-set-cmake-var TPL_Netcdf_LIBRARIES STRING FORCE : ${SEMS_NETCDF_LIBRARY_PATH|ENV}/libnetcdf.so
 
 opt-set-cmake-var Trilinos_ENABLE_Fortran OFF    BOOL         : OFF
 opt-set-cmake-var CMAKE_CXX_FLAGS                STRING       : -Wall -Wno-clobbered -Wno-vla -Wno-pragmas -Wno-unknown-pragmas -Wno-parentheses -Wno-unused-local-typedefs -Wno-literal-suffix -Wno-deprecated-declarations -Wno-misleading-indentation -Wno-int-in-bool-context -Wno-maybe-uninitialized -Wno-class-memaccess -Wno-nonnull-compare -Wno-address -Wno-inline -Wno-unused-but-set-variable -Wno-unused-variable -Wno-unused-label -Werror -Werror=shadow -DTRILINOS_HIDE_DEPRECATED_HEADER_WARNINGS
@@ -2014,7 +2000,8 @@ use USE-UVM|NO
 use USE-DEPRECATED|YES
 use PACKAGE-ENABLES|NO-PACKAGE-ENABLES
 
-use COMMON_SPACK_TPLS
+use COMMON
+use SPACK_TPLS
 
 opt-set-cmake-var MPI_EXEC_PRE_NUMPROCS_FLAGS                   STRING     : --bind-to;none --mca btl vader,self
 opt-set-cmake-var Teko_DISABLE_LSCSTABALIZED_TPETRA_ALPAH_INV_D BOOL       : ON
@@ -2099,7 +2086,8 @@ use USE-RDC|NO
 use USE-UVM|NO
 use USE-DEPRECATED|YES
 use PACKAGE-ENABLES|NO-PACKAGE-ENABLES
-use COMMON_SPACK_TPLS
+use COMMON
+use SPACK_TPLS
 
 opt-set-cmake-var MPI_EXEC_PRE_NUMPROCS_FLAGS                   STRING     : --bind-to;none --mca btl vader,self
 
@@ -2177,7 +2165,8 @@ use USE-RDC|NO
 use USE-UVM|NO
 use USE-DEPRECATED|YES
 use PACKAGE-ENABLES|NO-PACKAGE-ENABLES
-use COMMON_SPACK_TPLS
+use COMMON
+use SPACK_TPLS
 use SEMS_COMMON_CUDA_11
 
 # TPL ENABLE/DISABLE settings
@@ -2295,7 +2284,8 @@ use USE-UVM|YES
 use USE-DEPRECATED|YES
 use PACKAGE-ENABLES|NO-PACKAGE-ENABLES
 use PACKAGE-ENABLES|NO-EPETRA
-use COMMON_SPACK_TPLS
+use COMMON
+use SPACK_TPLS
 use SEMS_COMMON_CUDA_11
 
 use CUDA11-RUN-SERIAL-TESTS
@@ -2336,7 +2326,8 @@ use USE-RDC|NO
 use USE-UVM|NO
 use USE-DEPRECATED|YES
 use PACKAGE-ENABLES|NO-PACKAGE-ENABLES
-use COMMON_SPACK_TPLS
+use COMMON
+use SPACK_TPLS
 use SEMS_COMMON_CUDA_11
 
 # TPL ENABLE/DISABLE settings
@@ -2608,7 +2599,8 @@ use USE-COMPLEX|NO
 use USE-FPIC|NO
 use USE-MPI|YES
 use USE-PT|NO
-use COMMON_SPACK_TPLS
+use COMMON
+use SPACK_TPLS
 
 opt-set-cmake-var MPI_EXEC_PRE_NUMPROCS_FLAGS                            STRING       : --bind-to;none --mca btl vader,self
 opt-set-cmake-var Teko_DISABLE_LSCSTABALIZED_TPETRA_ALPAH_INV_D          BOOL         : ON
@@ -2645,7 +2637,8 @@ use USE-UVM|NO
 use USE-DEPRECATED|YES
 use PACKAGE-ENABLES|NO-PACKAGE-ENABLES
 
-use COMMON_SPACK_TPLS
+use COMMON
+use SPACK_TPLS
 
 #opt-set-cmake-var Amesos_ENABLE_SuperLU       BOOL FORCE : OFF
 #opt-set-cmake-var Amesos_ENABLE_SuperLUDist   BOOL FORCE : OFF
@@ -2696,7 +2689,8 @@ use USE-UVM|NO
 use USE-DEPRECATED|YES
 use PACKAGE-ENABLES|NO-PACKAGE-ENABLES
 
-use COMMON_SPACK_TPLS
+use COMMON
+use SPACK_TPLS
 
 opt-set-cmake-var Trilinos_ENABLE_Fortran OFF    BOOL         : OFF
 opt-set-cmake-var CMAKE_CXX_FLAGS                STRING       : -Wall -Wno-clobbered -Wno-vla -Wno-pragmas -Wno-unknown-pragmas -Wno-parentheses -Wno-unused-local-typedefs -Wno-literal-suffix -Wno-deprecated-declarations -Wno-misleading-indentation -Wno-int-in-bool-context -Wno-maybe-uninitialized -Wno-class-memaccess -Wno-nonnull-compare -Wno-address -Wno-inline -Wno-unused-but-set-variable -Wno-unused-variable -Wno-unused-label -Wno-error -DTRILINOS_HIDE_DEPRECATED_HEADER_WARNINGS
@@ -2754,7 +2748,8 @@ use USE-UVM|NO
 use USE-DEPRECATED|YES
 use PACKAGE-ENABLES|NO-PACKAGE-ENABLES
 
-use COMMON_SPACK_TPLS
+use COMMON
+use SPACK_TPLS
 opt-set-cmake-var MPI_EXEC_PRE_NUMPROCS_FLAGS                   STRING       : --bind-to;none --mca btl vader,self
 opt-set-cmake-var CMAKE_CXX_EXTENSIONS                          BOOL         : OFF
 opt-set-cmake-var Teko_DISABLE_LSCSTABALIZED_TPETRA_ALPAH_INV_D BOOL         : ON
@@ -2788,7 +2783,8 @@ use USE-UVM|NO
 use USE-DEPRECATED|YES
 use PACKAGE-ENABLES|NO-PACKAGE-ENABLES
 
-use COMMON_SPACK_TPLS
+use COMMON
+use SPACK_TPLS
 
 opt-set-cmake-var TPL_BLAS_LIBRARY_DIRS     STRING FORCE : ${OPENBLAS_ROOT|ENV}/lib
 opt-set-cmake-var TPL_BLAS_LIBRARIES        STRING FORCE : ${OPENBLAS_ROOT|ENV}/lib/libopenblas.a;-L${OPENBLAS_ROOT|ENV}/lib;-lgfortran;-lgomp;-lm
@@ -2844,7 +2840,8 @@ use USE-UVM|NO
 use USE-DEPRECATED|YES
 use PACKAGE-ENABLES|NO-PACKAGE-ENABLES
 
-use COMMON_SPACK_TPLS
+use COMMON
+use SPACK_TPLS
 
 opt-set-cmake-var CMAKE_CXX_FLAGS                STRING       : -Wall -Wno-clobbered -Wno-vla -Wno-pragmas -Wno-unknown-pragmas -Wno-parentheses -Wno-unused-local-typedefs -Wno-literal-suffix -Wno-deprecated-declarations -Wno-misleading-indentation -Wno-int-in-bool-context -Wno-maybe-uninitialized -Wno-class-memaccess -Wno-nonnull-compare -Wno-address -Wno-inline -Wno-unused-but-set-variable -Wno-unused-variable -Wno-unused-label -DTRILINOS_HIDE_DEPRECATED_HEADER_WARNINGS
 
@@ -2885,7 +2882,8 @@ use USE-UVM|NO
 use USE-DEPRECATED|YES
 use PACKAGE-ENABLES|NO-PACKAGE-ENABLES
 
-use COMMON_AUE_SPACK
+use COMMON
+use AUE_TPLS
 
 opt-set-cmake-var MPI_EXEC_PRE_NUMPROCS_FLAGS                                STRING       : --bind-to;none --mca btl vader,self
 opt-set-cmake-var Teko_DISABLE_LSCSTABALIZED_TPETRA_ALPAH_INV_D              BOOL         : ON
