Remove RHEL7 block
Change it to what it is, a common RHEL7 test disable.

Signed-off-by: Samuel E. Browne <sebrown@sandia.gov>

--- a/packages/framework/ini-files/config-specs.ini
+++ b/packages/framework/ini-files/config-specs.ini
@@ -65,7 +65,7 @@
 #   # TODO: mpi commands common to all rhel7 configurations
 #
 #   [rhel7_cee-intel-19.0.3-mpich2-3.2-release_static_no-kokkos-arch_mpi_no-rdc_empire]
-#   use RHEL7
+#   use RHEL7_TEST_DISABLES|COMMON
 #   # TODO: set kokkos arch
 #   use RHEL7_USE-MPI|YES_USE-RDC|NO # uses rhel7 `mpi_no-rdc` settings
 #   # ERROR: opt-set-cmake-var TPL_ENABLE_MPI         BOOL     : OFF
@@ -1137,18 +1137,15 @@ use ATS2-TEST-DISABLES
 use ATS2-RUN-SERIAL-TESTS
 
 
-#
-# RHEL7
-#
+###############################################################
+# Partial configurations intended to be `use`d within others. #
+###############################################################
 
-# Partial configurations intended to be `use`d within others.
-
-[RHEL7]
+[RHEL7_TEST_DISABLES|COMMON]
 opt-set-cmake-var SEACASAprepro_lib_aprepro_lib_array_test_DISABLE BOOL : ON
 
-[RHEL8]
-
 [RHEL7_TEST_DISABLES|INTEL]
+use RHEL7_TEST_DISABLES|COMMON
 #Failing tests under C++14
 #Remove line if test has been fixed
 opt-set-cmake-var Piro_AnalysisDriver_MPI_4_DISABLE BOOL : ON
@@ -1246,6 +1243,7 @@ opt-set-cmake-var Tempus_CXX_FLAGS STRING FORCE : ${CMAKE_CXX_FLAGS|CMAKE} -Werr
 #opt-set-cmake-var Zoltan2_CXX_FLAGS STRING FORCE : ${CMAKE_CXX_FLAGS|CMAKE} -Werror
 
 [RHEL7_TEST_DISABLES|INTEL-19]
+use RHEL7_TEST_DISABLES|COMMON
 use RHEL7_TEST_DISABLES|INTEL
 opt-set-cmake-var Zoltan2_scotch_example_MPI_4_DISABLE BOOL : ON
 opt-set-cmake-var Zoltan2_Partitioning1_VWeights_MPI_4_DISABLE BOOL : ON
@@ -1258,6 +1256,7 @@ opt-set-cmake-var Zoltan2_pamgenMeshAdapterTest_scotch_MPI_4_DISABLE BOOL : ON
 opt-set-cmake-var Phalanx_dynamic_data_layout_MPI_1_DISABLE BOOL : ON
 
 [RHEL7_TEST_DISABLES|CLANG]
+use RHEL7_TEST_DISABLES|COMMON
 # Disable three ShyLu_DD tests - see #2691
 opt-set-cmake-var ShyLU_DDFROSch_test_frosch_laplacian_epetra_2d_gdsw_MPI_4_DISABLE BOOL : ON
 opt-set-cmake-var ShyLU_DDFROSch_test_frosch_laplacian_epetra_2d_rgdsw_MPI_4_DISABLE BOOL : ON
@@ -1687,7 +1686,7 @@ use BUILD-TYPE|DEBUG
 use SEMS_LIB-TYPE|SHARED
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 use COMMON
-use RHEL7
+use RHEL7_TEST_DISABLES|COMMON
 use USE-ASAN|NO
 use USE-FPIC|NO
 use USE-MPI|NO
@@ -1750,7 +1749,7 @@ use BUILD-TYPE|DEBUG
 use SEMS_LIB-TYPE|SHARED
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 use COMMON
-use RHEL7
+use RHEL7_TEST_DISABLES|COMMON
 use USE-ASAN|NO
 use USE-FPIC|NO
 use USE-MPI|YES
@@ -1839,7 +1838,7 @@ use BUILD-TYPE|RELEASE-DEBUG
 use SEMS_LIB-TYPE|SHARED
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 use COMMON
-use RHEL7
+use RHEL7_TEST_DISABLES|COMMON
 use USE-ASAN|NO
 use USE-FPIC|NO
 use USE-MPI|NO
@@ -1881,7 +1880,7 @@ use BUILD-TYPE|RELEASE-DEBUG
 use SEMS_LIB-TYPE|STATIC
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 use COMMON
-use RHEL7
+use RHEL7_TEST_DISABLES|COMMON
 use USE-ASAN|NO
 use USE-FPIC|NO
 use USE-MPI|YES
@@ -1915,7 +1914,7 @@ use BUILD-TYPE|RELEASE-DEBUG
 use SEMS_LIB-TYPE|SHARED
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 use COMMON
-use RHEL7
+use RHEL7_TEST_DISABLES|COMMON
 use USE-ASAN|NO
 use USE-FPIC|NO
 use USE-MPI|YES
@@ -1993,7 +1992,7 @@ use BUILD-TYPE|RELEASE-DEBUG
 use SEMS_V2_LIB-TYPE|SHARED
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 use COMMON
-use RHEL7
+use RHEL7_TEST_DISABLES|COMMON
 use USE-ASAN|NO
 use USE-FPIC|NO
 use USE-MPI|YES
@@ -2034,7 +2033,7 @@ use BUILD-TYPE|RELEASE-DEBUG
 use SEMS_LIB-TYPE|SHARED
 use KOKKOS-ARCH|NO-KOKKOS-ARCH
 use COMMON
-use RHEL7
+use RHEL7_TEST_DISABLES|COMMON
 use USE-ASAN|NO
 use USE-FPIC|YES
 use USE-MPI|YES
@@ -2161,7 +2160,7 @@ use BUILD-TYPE|RELEASE
 use SEMS_LIB-TYPE|STATIC
 use KOKKOS-ARCH|VOLTA70
 use COMMON
-use RHEL7
+use RHEL7_TEST_DISABLES|COMMON
 use USE-ASAN|NO
 use USE-FPIC|NO
 use USE-MPI|YES
@@ -2280,7 +2279,7 @@ use BUILD-TYPE|RELEASE
 use SEMS_LIB-TYPE|STATIC
 use KOKKOS-ARCH|VOLTA70
 use COMMON
-use RHEL7
+use RHEL7_TEST_DISABLES|COMMON
 use USE-ASAN|NO
 use USE-FPIC|NO
 use USE-MPI|YES
