Use xxxx_TPLS blocks
Now can tell at-a-glance if a configuration is using SEMS_V1, Spack, or
AUE.

Signed-off-by: Samuel E. Browne <sebrown@sandia.gov>

--- a/packages/framework/ini-files/config-specs.ini
+++ b/packages/framework/ini-files/config-specs.ini
@@ -976,8 +976,8 @@ opt-set-cmake-var Trilinos_ENABLE_Pliris BOOL FORCE : OFF
 # file.  For more details on the complexity of this, see Trilinos GitHub Issue
 # #10931.
 
-[ATS2-COMMON-OVERRIDES]
-# Override TPL enables from [COMMON]
+[ATS2-TPLS]
+use TPLS
 opt-set-cmake-var TPL_ENABLE_Scotch   BOOL FORCE : OFF
 opt-set-cmake-var TPL_ENABLE_ParMETIS BOOL FORCE : OFF
 opt-set-cmake-var TPL_ENABLE_Pthread  BOOL FORCE : OFF
@@ -1110,8 +1110,8 @@ opt-set-cmake-var Compadre_GMLS_Staggered_Manifold_Refinement_Study_DISABLE BOOL
 
 [ats2_cuda-11.2.152-gnu-8.3.1-spmpi-rolling_release_static_Volta70_Power9_no-asan_no-complex_no-fpic_mpi_pt_no-rdc_no-uvm_deprecated-on_all]
 use COMMON
+use ATS2-TPLS
 use ATS2
-use ATS2-COMMON-OVERRIDES
 
 use NODE-TYPE|CUDA
 use BUILD-TYPE|RELEASE
@@ -1568,8 +1568,8 @@ opt-set-cmake-var ShyLU_DD_CXX_FLAGS STRING : ${CMAKE_CXX_FLAGS|CMAKE} -Wno-erro
 # Full configurations intended to be loaded.
 
 [rhel7_sems-gnu-7.2.0-anaconda3-serial_debug_shared_no-kokkos-arch_no-asan_no-complex_no-fpic_no-mpi_no-pt_no-rdc_no-uvm_deprecated-on_pr-framework]
-#uses sems-archive modules
 use COMMON
+use SEMS_V1_TPLS
 use COMPILER|GNU
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|DEBUG
@@ -1629,8 +1629,8 @@ opt-set-cmake-var Trilinos_ENABLE_BUILD_STATS BOOL FORCE   : OFF
 
 
 [rhel7_sems-gnu-8.3.0-openmpi-1.10.1-serial_debug_shared_no-kokkos-arch_no-asan_no-complex_no-fpic_mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
-#uses sems-archive modules
 use COMMON
+use SEMS_V1_TPLS
 use COMPILER|GNU
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|DEBUG
@@ -1716,8 +1716,8 @@ use rhel7_sems-gnu-8.3.0-openmpi-1.10.1-serial_debug_shared_no-kokkos-arch_no-as
 use PACKAGE-ENABLES|ALL
 
 [rhel7_sems-gnu-8.3.0-serial_release-debug_shared_no-kokkos-arch_no-asan_no-complex_no-fpic_no-mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
-#uses sems-archive modules
 use COMMON
+use SEMS_V1_TPLS
 use COMPILER|GNU
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|RELEASE-DEBUG
@@ -1757,8 +1757,8 @@ use rhel7_sems-gnu-8.3.0-serial_release-debug_shared_no-kokkos-arch_no-asan_no-c
 use PACKAGE-ENABLES|ALL-NO-EPETRA
 
 [rhel7_sems-gnu-8.3.0-openmpi-1.10.1-openmp_release-debug_static_no-kokkos-arch_no-asan_no-complex_no-fpic_mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
-#uses sems-archive modules
 use COMMON
+use SEMS_V1_TPLS
 use COMPILER|GNU
 use NODE-TYPE|OPENMP
 use BUILD-TYPE|RELEASE-DEBUG
@@ -1791,8 +1791,8 @@ use rhel7_sems-gnu-8.3.0-openmpi-1.10.1-openmp_release-debug_static_no-kokkos-ar
 use PACKAGE-ENABLES|ALL
 
 [rhel7_sems-clang-11.0.1-openmpi-1.10.1-serial_release-debug_shared_no-kokkos-arch_no-asan_no-complex_no-fpic_mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
-#uses sems-archive modules
 use COMMON
+use SEMS_V1_TPLS
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|RELEASE-DEBUG
 use SEMS_LIB-TYPE|SHARED
@@ -1867,8 +1867,8 @@ use rhel7_sems-clang-11.0.1-openmpi-1.10.1-serial_release-debug_shared_no-kokkos
 use PACKAGE-ENABLES|ALL
 
 [rhel8_sems-clang-11.0.1-openmpi-4.0.5-serial_release-debug_shared_no-kokkos-arch_no-asan_no-complex_no-fpic_mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
-# uses sems-v2 modules
 use COMMON
+use SPACK_TPLS
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|RELEASE-DEBUG
 use SEMS_V2_LIB-TYPE|SHARED
@@ -1884,7 +1884,6 @@ use USE-UVM|NO
 use USE-DEPRECATED|YES
 use PACKAGE-ENABLES|NO-PACKAGE-ENABLES
 
-use SPACK_TPLS
 
 opt-set-cmake-var MPI_EXEC_PRE_NUMPROCS_FLAGS                   STRING     : --bind-to;none --mca btl vader,self
 opt-set-cmake-var Teko_DISABLE_LSCSTABALIZED_TPETRA_ALPAH_INV_D BOOL       : ON
@@ -1903,8 +1902,8 @@ use rhel8_sems-clang-11.0.1-openmpi-4.0.5-serial_release-debug_shared_no-kokkos-
 use PACKAGE-ENABLES|ALL
 
 [rhel7_sems-intel-2021.3-sems-openmpi-4.0.5_release-debug_shared_no-kokkos-arch_no-asan_no-complex_fpic_mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
-# uses sems-v2 modules
 use COMMON
+use SPACK_TPLS
 use COMPILER|INTEL
 use BUILD-TYPE|RELEASE-DEBUG
 use SEMS_LIB-TYPE|SHARED
@@ -1918,7 +1917,6 @@ use USE-RDC|NO
 use USE-UVM|NO
 use USE-DEPRECATED|YES
 use PACKAGE-ENABLES|NO-PACKAGE-ENABLES
-use SPACK_TPLS
 
 opt-set-cmake-var MPI_EXEC_PRE_NUMPROCS_FLAGS                   STRING     : --bind-to;none --mca btl vader,self
 
@@ -1980,8 +1978,8 @@ use rhel7_sems-intel-2021.3-sems-openmpi-4.0.5_release-debug_shared_no-kokkos-ar
 use PACKAGE-ENABLES|ALL
 
 [rhel7_sems-cuda-11.4.2-sems-gnu-10.1.0-sems-openmpi-4.0.5_release_static_Volta70_no-asan_complex_no-fpic_mpi_pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
-# uses sems-v2 modules
 use COMMON
+use SPACK_TPLS
 use COMPILER|CUDA
 use NODE-TYPE|CUDA
 use BUILD-TYPE|RELEASE
@@ -1997,7 +1995,6 @@ use USE-RDC|NO
 use USE-UVM|NO
 use USE-DEPRECATED|YES
 use PACKAGE-ENABLES|NO-PACKAGE-ENABLES
-use SPACK_TPLS
 use SEMS_COMMON_CUDA_11
 
 # TPL ENABLE/DISABLE settings
@@ -2098,8 +2095,8 @@ use rhel7_sems-cuda-11.4.2-sems-gnu-10.1.0-sems-openmpi-4.0.5_release_static_Vol
 use PACKAGE-ENABLES|ALL-NO-EPETRA
 
 [rhel7_sems-cuda-11.4.2-sems-gnu-10.1.0-sems-openmpi-4.0.5_release_static_Volta70_no-asan_complex_no-fpic_mpi_pt_no-rdc_uvm_deprecated-on_no-package-enables]
-# uses sems-v2 modules
 use COMMON
+use SPACK_TPLS
 use COMPILER|CUDA
 use NODE-TYPE|CUDA
 use BUILD-TYPE|RELEASE
@@ -2116,7 +2113,6 @@ use USE-UVM|YES
 use USE-DEPRECATED|YES
 use PACKAGE-ENABLES|NO-PACKAGE-ENABLES
 use PACKAGE-ENABLES|NO-EPETRA
-use SPACK_TPLS
 use SEMS_COMMON_CUDA_11
 
 use CUDA11-RUN-SERIAL-TESTS
@@ -2141,8 +2137,8 @@ opt-set-cmake-var CMAKE_CXX_FLAGS                          STRING FORCE : -Wall 
 opt-set-cmake-var ROL_example_PinT_parabolic-control_AugmentedSystem_test_MPI_2_DISABLE BOOL FORCE : ON
 
 [rhel8_sems-cuda-11.4.2-sems-gnu-10.1.0-sems-openmpi-4.1.4_release_static_Volta70_no-asan_complex_no-fpic_mpi_pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
-# uses sems-v2 modules
 use COMMON
+use SPACK_TPLS
 use COMPILER|CUDA
 use NODE-TYPE|CUDA
 use BUILD-TYPE|RELEASE
@@ -2157,7 +2153,6 @@ use USE-RDC|NO
 use USE-UVM|NO
 use USE-DEPRECATED|YES
 use PACKAGE-ENABLES|NO-PACKAGE-ENABLES
-use SPACK_TPLS
 use SEMS_COMMON_CUDA_11
 
 # TPL ENABLE/DISABLE settings
@@ -2252,8 +2247,8 @@ use rhel8_sems-cuda-11.4.2-sems-gnu-10.1.0-sems-openmpi-4.1.4_release_static_Vol
 use PACKAGE-ENABLES|ALL-NO-EPETRA
 
 [rhel7_ascdo-gnu-10.3.0-serial_debug_shared_no-kokkos-arch_no-asan_no-complex_no-fpic_no-mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
-# uses asc-do modules
 use COMMON
+use SPACK_TPLS
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|DEBUG
 use SEMS_LIB-TYPE|SHARED
@@ -2285,8 +2280,8 @@ use rhel7_ascdo-gnu-10.3.0-serial_debug_shared_no-kokkos-arch_no-asan_no-complex
 use PACKAGE-ENABLES|ALL
 
 [rhel7_ascdo-gnu-10.3.0-openmp_debug_shared_no-kokkos-arch_no-asan_no-complex_no-fpic_no-mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
-# uses asc-do modules
 use COMMON
+use SPACK_TPLS
 use NODE-TYPE|OPENMP
 use BUILD-TYPE|DEBUG
 use SEMS_LIB-TYPE|SHARED
@@ -2320,8 +2315,8 @@ use rhel7_ascdo-gnu-10.3.0-openmp_debug_shared_no-kokkos-arch_no-asan_no-complex
 use PACKAGE-ENABLES|ALL
 
 [rhel7_ascdo-gnu-10.3.0-openmpi-4.1.4-serial_debug_shared_no-kokkos-arch_no-asan_no-complex_no-fpic_mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
-# uses asc-do modules
 use COMMON
+use SPACK_TPLS
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|DEBUG
 use SEMS_LIB-TYPE|SHARED
@@ -2356,8 +2351,8 @@ use PACKAGE-ENABLES|ALL
 
 
 [rhel7_ascdo-gnu-12.1.0-serial_debug_shared_no-kokkos-arch_no-asan_no-complex_no-fpic_no-mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
-# uses asc-do modules
 use COMMON
+use SPACK_TPLS
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|DEBUG
 use SEMS_LIB-TYPE|SHARED
@@ -2389,8 +2384,8 @@ use rhel7_ascdo-gnu-12.1.0-serial_debug_shared_no-kokkos-arch_no-asan_no-complex
 use PACKAGE-ENABLES|ALL
 
 [rhel7_ascdo-gnu-12.1.0-openmp_debug_shared_no-kokkos-arch_no-asan_no-complex_no-fpic_no-mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
-# uses asc-do modules
 use COMMON
+use SPACK_TPLS
 use NODE-TYPE|OPENMP
 use BUILD-TYPE|DEBUG
 use SEMS_LIB-TYPE|SHARED
@@ -2424,8 +2419,8 @@ use rhel7_ascdo-gnu-12.1.0-openmp_debug_shared_no-kokkos-arch_no-asan_no-complex
 use PACKAGE-ENABLES|ALL
 
 [rhel7_ascdo-gnu-12.1.0-openmpi-4.1.4-serial_debug_shared_no-kokkos-arch_no-asan_no-complex_no-fpic_mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
-# uses asc-do modules
 use COMMON
+use SPACK_TPLS
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|DEBUG
 use SEMS_LIB-TYPE|SHARED
@@ -2435,7 +2430,6 @@ use USE-COMPLEX|NO
 use USE-FPIC|NO
 use USE-MPI|YES
 use USE-PT|NO
-use SPACK_TPLS
 
 opt-set-cmake-var MPI_EXEC_PRE_NUMPROCS_FLAGS                            STRING       : --bind-to;none --mca btl vader,self
 opt-set-cmake-var Teko_DISABLE_LSCSTABALIZED_TPETRA_ALPAH_INV_D          BOOL         : ON
@@ -2456,8 +2450,8 @@ use PACKAGE-ENABLES|ALL
 
 ####### under Testing #######
 [rhel7_sems-gnu-8.5.0-openmpi-4.1.6-serial_debug_shared_no-kokkos-arch_no-asan_no-complex_no-fpic_mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
-# uses sems-v2 modules
 use COMMON
+use SPACK_TPLS
 use COMPILER|GNU
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|DEBUG
@@ -2472,8 +2466,6 @@ use USE-RDC|NO
 use USE-UVM|NO
 use USE-DEPRECATED|YES
 use PACKAGE-ENABLES|NO-PACKAGE-ENABLES
-
-use SPACK_TPLS
 
 #opt-set-cmake-var Amesos_ENABLE_SuperLU       BOOL FORCE : OFF
 #opt-set-cmake-var Amesos_ENABLE_SuperLUDist   BOOL FORCE : OFF
@@ -2507,8 +2499,8 @@ use PACKAGE-ENABLES|ALL
 opt-set-cmake-var CMAKE_CXX_STANDARD             STRING FORCE : 20
 
 [rhel7_sems-v2-gnu-8.3.0-serial_release-debug_shared_no-kokkos-arch_no-asan_no-complex_no-fpic_no-mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
-# uses sems-v2 modules
 use COMMON
+use SPACK_TPLS
 use COMPILER|GNU
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|RELEASE-DEBUG
@@ -2523,7 +2515,6 @@ use USE-RDC|NO
 use USE-UVM|NO
 use USE-DEPRECATED|YES
 use PACKAGE-ENABLES|NO-PACKAGE-ENABLES
-use SPACK_TPLS
 
 opt-set-cmake-var Trilinos_ENABLE_Fortran OFF    BOOL         : OFF
 opt-set-cmake-var CMAKE_CXX_FLAGS                STRING       : -Wall -Wno-clobbered -Wno-vla -Wno-pragmas -Wno-unknown-pragmas -Wno-parentheses -Wno-unused-local-typedefs -Wno-literal-suffix -Wno-deprecated-declarations -Wno-misleading-indentation -Wno-int-in-bool-context -Wno-maybe-uninitialized -Wno-class-memaccess -Wno-nonnull-compare -Wno-address -Wno-inline -Wno-unused-but-set-variable -Wno-unused-variable -Wno-unused-label -Wno-error -DTRILINOS_HIDE_DEPRECATED_HEADER_WARNINGS
@@ -2565,8 +2556,8 @@ use rhel7_sems-v2-gnu-8.3.0-serial_release-debug_shared_no-kokkos-arch_no-asan_n
 use PACKAGE-ENABLES|ALL
 
 [rhel7_sems-gnu-8.3.0-openmpi-1.10.7-openmp_release-debug_static_no-kokkos-arch_no-asan_no-complex_no-fpic_mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
-# uses sems-v2 modules
 use COMMON
+use SPACK_TPLS
 use COMPILER|GNU
 use NODE-TYPE|OPENMP
 use BUILD-TYPE|RELEASE-DEBUG
@@ -2582,7 +2573,6 @@ use USE-UVM|NO
 use USE-DEPRECATED|YES
 use PACKAGE-ENABLES|NO-PACKAGE-ENABLES
 
-use SPACK_TPLS
 opt-set-cmake-var MPI_EXEC_PRE_NUMPROCS_FLAGS                   STRING       : --bind-to;none --mca btl vader,self
 opt-set-cmake-var CMAKE_CXX_EXTENSIONS                          BOOL         : OFF
 opt-set-cmake-var Teko_DISABLE_LSCSTABALIZED_TPETRA_ALPAH_INV_D BOOL         : ON
@@ -2598,8 +2588,8 @@ use rhel7_sems-gnu-8.3.0-openmpi-1.10.7-openmp_release-debug_static_no-kokkos-ar
 use PACKAGE-ENABLES|ALL
 
 [rhel8_gcc-openmpi_debug_shared_no-kokkos-arch_no-asan_complex_no-fpic_mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
-#uses a containerized environment
 use COMMON
+use SPACK_TPLS
 use COMPILER|GNU
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|DEBUG
@@ -2616,8 +2606,6 @@ use USE-RDC|NO
 use USE-UVM|NO
 use USE-DEPRECATED|YES
 use PACKAGE-ENABLES|NO-PACKAGE-ENABLES
-
-use SPACK_TPLS
 
 opt-set-cmake-var TPL_BLAS_LIBRARY_DIRS     STRING FORCE : ${OPENBLAS_ROOT|ENV}/lib
 opt-set-cmake-var TPL_BLAS_LIBRARIES        STRING FORCE : ${OPENBLAS_ROOT|ENV}/lib/libopenblas.a;-L${OPENBLAS_ROOT|ENV}/lib;-lgfortran;-lgomp;-lm
@@ -2655,8 +2643,8 @@ use GCC_PACKAGE_SPECIFIC_WARNING_FLAGS
 
 
 [rhel8_gcc-serial_release-debug_shared_no-kokkos-arch_no-asan_no-complex_no-fpic_no-mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
-# gcc-serial containerized environment
 use COMMON
+use SPACK_TPLS
 use COMPILER|GNU
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|RELEASE-DEBUG
@@ -2673,8 +2661,6 @@ use USE-RDC|NO
 use USE-UVM|NO
 use USE-DEPRECATED|YES
 use PACKAGE-ENABLES|NO-PACKAGE-ENABLES
-
-use SPACK_TPLS
 
 opt-set-cmake-var CMAKE_CXX_FLAGS                STRING       : -Wall -Wno-clobbered -Wno-vla -Wno-pragmas -Wno-unknown-pragmas -Wno-parentheses -Wno-unused-local-typedefs -Wno-literal-suffix -Wno-deprecated-declarations -Wno-misleading-indentation -Wno-int-in-bool-context -Wno-maybe-uninitialized -Wno-class-memaccess -Wno-nonnull-compare -Wno-address -Wno-inline -Wno-unused-but-set-variable -Wno-unused-variable -Wno-unused-label -DTRILINOS_HIDE_DEPRECATED_HEADER_WARNINGS
 
@@ -2699,6 +2685,7 @@ use GCC_PACKAGE_SPECIFIC_WARNING_FLAGS
 
 [rhel8_aue-gcc-openmpi_debug_shared_no-kokkos-arch_no-asan_complex_no-fpic_mpi_no-pt_no-rdc_no-uvm_deprecated-on_no-package-enables]
 use COMMON
+use AUE_TPLS
 use COMPILER|GNU
 use NODE-TYPE|SERIAL
 use BUILD-TYPE|DEBUG
@@ -2715,7 +2702,6 @@ use USE-RDC|NO
 use USE-UVM|NO
 use USE-DEPRECATED|YES
 use PACKAGE-ENABLES|NO-PACKAGE-ENABLES
-use AUE_TPLS
 
 opt-set-cmake-var MPI_EXEC_PRE_NUMPROCS_FLAGS                                STRING       : --bind-to;none --mca btl vader,self
 opt-set-cmake-var Teko_DISABLE_LSCSTABALIZED_TPETRA_ALPAH_INV_D              BOOL         : ON
